Memory access speedup

--- a/.config
+++ b/.config
@@ -100,7 +100,7 @@ auto_reprocess: true
 
 ; Compiler arguments for cython
 rpi_weave: -O3 -mfpu=neon -funsafe-loop-optimizations -ftree-loop-if-convert-stores
-linux_pc_weave: -O3 -march=native -flto
+linux_pc_weave: -O3
 win_pc_weave: -Wall
 
 
